--- a/lms/goodbye.html
+++ b/lms/goodbye.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color: #ffffff;">
 
-<p role="alert" style="color: #333333;font-family: Inter, articulate, tahoma, arial;font-size: medium;text-align: center;">
+<p role="alert" style="color: #333333;font-family: Tiro Devanagari Hindi, articulate, tahoma, arial;font-size: medium;text-align: center;">
 <br><br><br><br>
 The content has ended. You may close this window.
 </p>
